[gd_scene load_steps=3 format=3 uid="uid://dblq28ynlah3a"]

[ext_resource type="PackedScene" uid="uid://cfjx17roykbet" path="res://addons/HTNDomainManager/PluginSystem/Nodes/ModuleNodes/ModuleBase/htn_module_base_node.tscn" id="1_ekb07"]
[ext_resource type="Script" path="res://addons/HTNDomainManager/PluginSystem/Nodes/ModuleNodes/RandomNode/HTNRandomNode.gd" id="2_blhkq"]

[node name="HTNRandomNode" instance=ExtResource("1_ekb07")]
title = "Random Node"
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("2_blhkq")

[node name="TypeOptionButton" type="OptionButton" parent="." index="2"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
allow_reselect = true
item_count = 3
popup/item_0/text = "Int"
popup/item_1/text = "Float"
popup/item_1/id = 1
popup/item_2/text = "Bool"
popup/item_2/id = 2

[node name="MinMaxContainer" type="HBoxContainer" parent="." index="3"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="MinMaxContainer" index="0"]
layout_mode = 2
text = "Min:"

[node name="MinValueSpinBox" type="SpinBox" parent="MinMaxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MinMaxContainer" index="2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="MinMaxContainer" index="3"]
layout_mode = 2
text = "Max:"

[node name="MaxValueSpinBox" type="SpinBox" parent="MinMaxContainer" index="4"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="item_selected" from="TypeOptionButton" to="." method="_on_type_option_button_item_selected"]
